// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`brainAtlas render goldens > detail panel: cerebellum (ACCURACY LOCK — ~80%, not 50%) 1`] = `
{
  "buttons": 44,
  "canvases": 1,
  "inputs": 1,
  "lengthBucket": 127,
  "sha": "4b73c6e867325c2b",
  "svgs": 0,
}
`;

exports[`brainAtlas render goldens > detail panel: dopamine (ACCURACY LOCK — no "pleasure chemical" overclaim) 1`] = `
{
  "buttons": 51,
  "canvases": 1,
  "inputs": 7,
  "lengthBucket": 162,
  "sha": "c9e005d6dfd28742",
  "svgs": 1,
}
`;

exports[`brainAtlas render goldens > quiz mode renders a question + options 1`] = `
{
  "buttons": 45,
  "canvases": 1,
  "inputs": 1,
  "lengthBucket": 118,
  "sha": "bcfa351c23a51d0b",
  "svgs": 0,
}
`;

exports[`brainAtlas render goldens > view: basalGangliaLoop renders + pins a digest 1`] = `
{
  "buttons": 49,
  "canvases": 1,
  "inputs": 1,
  "lengthBucket": 155,
  "sha": "fcd145ccd1c67935",
  "svgs": 0,
}
`;

exports[`brainAtlas render goldens > view: brainstemCrossSection renders + pins a digest 1`] = `
{
  "buttons": 45,
  "canvases": 1,
  "inputs": 1,
  "lengthBucket": 140,
  "sha": "bd0e38837fe9f96e",
  "svgs": 0,
}
`;

exports[`brainAtlas render goldens > view: cerebellumClinic renders + pins a digest 1`] = `
{
  "buttons": 45,
  "canvases": 1,
  "inputs": 1,
  "lengthBucket": 140,
  "sha": "2f32bf73a0d11090",
  "svgs": 0,
}
`;

exports[`brainAtlas render goldens > view: cranialNervesWillis renders + pins a digest 1`] = `
{
  "buttons": 54,
  "canvases": 1,
  "inputs": 1,
  "lengthBucket": 168,
  "sha": "808caec12f53df31",
  "svgs": 0,
}
`;

exports[`brainAtlas render goldens > view: crossLateral renders + pins a digest 1`] = `
{
  "buttons": 45,
  "canvases": 1,
  "inputs": 1,
  "lengthBucket": 142,
  "sha": "5af8b99e938535c6",
  "svgs": 0,
}
`;

exports[`brainAtlas render goldens > view: csfHydrocephalus renders + pins a digest 1`] = `
{
  "buttons": 45,
  "canvases": 1,
  "inputs": 1,
  "lengthBucket": 141,
  "sha": "88502d991e827d81",
  "svgs": 0,
}
`;

exports[`brainAtlas render goldens > view: eegWaves renders + pins a digest 1`] = `
{
  "buttons": 52,
  "canvases": 2,
  "inputs": 1,
  "lengthBucket": 153,
  "sha": "43f2c7bd231c74ed",
  "svgs": 0,
}
`;

exports[`brainAtlas render goldens > view: homunculus renders + pins a digest 1`] = `
{
  "buttons": 47,
  "canvases": 1,
  "inputs": 1,
  "lengthBucket": 139,
  "sha": "fa3a764e613ba774",
  "svgs": 0,
}
`;

exports[`brainAtlas render goldens > view: inferior renders + pins a digest 1`] = `
{
  "buttons": 49,
  "canvases": 1,
  "inputs": 1,
  "lengthBucket": 146,
  "sha": "248d83c5fcccee29",
  "svgs": 0,
}
`;

exports[`brainAtlas render goldens > view: languageNetwork renders + pins a digest 1`] = `
{
  "buttons": 51,
  "canvases": 1,
  "inputs": 1,
  "lengthBucket": 154,
  "sha": "e22c3207ae843a70",
  "svgs": 0,
}
`;

exports[`brainAtlas render goldens > view: lateral renders + pins a digest 1`] = `
{
  "buttons": 54,
  "canvases": 1,
  "inputs": 1,
  "lengthBucket": 166,
  "sha": "10761bd124624545",
  "svgs": 0,
}
`;

exports[`brainAtlas render goldens > view: limbicPapezLoop renders + pins a digest 1`] = `
{
  "buttons": 52,
  "canvases": 1,
  "inputs": 1,
  "lengthBucket": 167,
  "sha": "3ee57cec164e0bc1",
  "svgs": 0,
}
`;

exports[`brainAtlas render goldens > view: medial renders + pins a digest 1`] = `
{
  "buttons": 53,
  "canvases": 1,
  "inputs": 1,
  "lengthBucket": 162,
  "sha": "03d778720a9f38da",
  "svgs": 0,
}
`;

exports[`brainAtlas render goldens > view: neuron renders + pins a digest 1`] = `
{
  "buttons": 45,
  "canvases": 1,
  "inputs": 1,
  "lengthBucket": 146,
  "sha": "18a4e2e289bcadad",
  "svgs": 0,
}
`;

exports[`brainAtlas render goldens > view: neurotransmitters renders + pins a digest 1`] = `
{
  "buttons": 66,
  "canvases": 1,
  "inputs": 7,
  "lengthBucket": 221,
  "sha": "5737ac55dfdedea3",
  "svgs": 1,
}
`;

exports[`brainAtlas render goldens > view: sleepStages renders + pins a digest 1`] = `
{
  "buttons": 43,
  "canvases": 1,
  "inputs": 1,
  "lengthBucket": 132,
  "sha": "b1ead2939841ac7c",
  "svgs": 0,
}
`;

exports[`brainAtlas render goldens > view: stimulate renders + pins a digest 1`] = `
{
  "buttons": 48,
  "canvases": 1,
  "inputs": 1,
  "lengthBucket": 146,
  "sha": "08a5910670c36091",
  "svgs": 0,
}
`;

exports[`brainAtlas render goldens > view: strokeTerritories renders + pins a digest 1`] = `
{
  "buttons": 45,
  "canvases": 1,
  "inputs": 1,
  "lengthBucket": 141,
  "sha": "04afa5f9343b7214",
  "svgs": 0,
}
`;

exports[`brainAtlas render goldens > view: superior renders + pins a digest 1`] = `
{
  "buttons": 46,
  "canvases": 1,
  "inputs": 1,
  "lengthBucket": 134,
  "sha": "518a57e644e8da0b",
  "svgs": 0,
}
`;

exports[`brainAtlas render goldens > view: synapses renders + pins a digest 1`] = `
{
  "buttons": 44,
  "canvases": 1,
  "inputs": 1,
  "lengthBucket": 133,
  "sha": "a1fa155f58f11cb0",
  "svgs": 0,
}
`;

exports[`brainAtlas render goldens > view: visualPathway renders + pins a digest 1`] = `
{
  "buttons": 50,
  "canvases": 1,
  "inputs": 1,
  "lengthBucket": 150,
  "sha": "03e02c5bed4424ef",
  "svgs": 0,
}
`;
